Improve performance of URLFactory.create()